deploy/kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: mypythonapp
  namespace: default
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: mypythonapp
  type: NodePort
