deploy/kubernetes/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mypythonapp-ingress
spec:
  backend:
    serviceName: mypythonapp
    servicePort: 80
